푸터 수정 완

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div><!-- //.inner -->
         </header>
         <main></main>
-        <footer class="footer">
+        <footer class="ver_dark ver_white">
             <div class="footer_inner">
                 <!-- Top Area -->
                 <div class="footer_top">
@@ -101,14 +101,16 @@
                                 </ul><!-- //.footer_gnb_list -->
 
                                 <div class="footer_family_site">
-                                    <button type="button" class="family_site_btn">
-                                        <span>Family Site</span>
-                                        <img src="asset/up.svg"
-                                            alt="arrow" class="family_site_arrow">
-                                    </button>
                                     <ul class="family_site_list">
                                         <li><a href="#" class="family_site_link">CJ ENM</a></li>
                                         <li><a href="#" class="family_site_link">CJ GROUP</a></li>
+                                        <li class="family_site_btn_wrap">
+                                            <button type="button" class="family_site_btn">
+                                                <span>Family Site</span>
+                                                <img src="asset/up.svg"
+                                                    alt="arrow" class="family_site_arrow">
+                                            </button>
+                                        </li>
                                     </ul><!-- //.family_site_list -->
                                 </div><!-- //.footer_family_site -->
                             </div><!-- //.footer_gnb_wrap -->
@@ -120,8 +122,7 @@
                 <div class="footer_bottom">
                     <div class="footer_brand">
                         <div class="footer_logo">
-                            <img src="asset/logo_w.png"
-                                alt="Studio Dragon">
+                            
                         </div><!-- //.footer_logo -->
 
                         <div class="footer_sns">
