메인에 새로운 섹션 추가

--- a/main_beck.html
+++ b/main_beck.html
@@ -89,8 +89,8 @@
 
 
         <main>
-            <div class="circlebody">
-                <section id="circle">
+            <section class="circlebody">
+                <div id="circle">
                     <article class="face1">
                         <div class="poster"><img src="./back/img/img01.webp" alt="The Glory"></div>
                     </article>
@@ -115,8 +115,44 @@
                     <article class="face8">
                         <div class="poster"><img src="./back/img/img08.webp" alt="Jeongnyeon: The Star Is Born"></div>
                     </article>
-                </section>
-            </div><!-- //.wrap -->
+                </div>
+            </section><!-- //.wrap -->
+
+            <section class="comingsoon">
+                <div class="inner">
+                    <div class="top">
+                        <h2>COMING SOON</h2>
+                        <button type="button">MORE</button>
+                    </div>
+                    <div class="CScontents1">
+                        <img src="./back/img/CS_img.png" alt="Taepung Corporation" data-aos="fade-up" data-aos-delay="500" data-aos-mirror="true">
+                        <div class="txt">
+                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">Typhoon Corporation</h3>
+                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">TVN & TVING<br>10/11 Saturday</p>
+                        </div>
+                    </div>
+                    <div class="CScontents2">
+                        <img src="./back/img/CS_img2.png" alt="Genie, Make a Wish" data-aos="fade-up" data-aos-delay="500" data-aos-mirror="true">
+                        <div class="txt">
+                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">Genie, Make a Wish</h3>
+                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">Netflix<br>10/03 Friday</p>
+                        </div>
+                    </div>
+                    <div class="CScontents3">
+                        <img src="./back/img/CS_img3.png" alt="pro bono" data-aos="fade-up" data-aos-delay="500" data-aos-mirror="true">
+                        <div class="txt">
+                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">pro bono</h3>
+                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">TVING <br> 2025~2026</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
+
+
+
 
         </main>
     </div><!-- //.wrap -->
