--- a/IR_Kwon/IR.html
+++ b/IR_Kwon/IR.html
@@ -17,8 +17,8 @@
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="/js/common.js"></script>
+    <script src="./js/main.js"></script>
 </head>
-
 <body>
     <div class="wrap">
         <header class="">
@@ -93,7 +93,7 @@
     </div><!-- //. title -->
     <div class="container">
       <figure class="figure">
-        <img class="img" src="./img/Value_Drivers_Img.png" alt="Value Drivers" />
+        <img class="image" src="./img/Value_Drivers_Img.png" alt="Value Drivers" />
       </figure><!-- //. figure -->
       <div class="area">
         <article class="item item_1">
@@ -144,7 +144,7 @@
     <div class="container">
       <article class="card card_1">
         <figure class="figure">
-          <img class="img" src="./img/Execution_Pro.png" alt="Production" />
+          <img class="image" src="./img/Execution_Pro.png" alt="Production" />
         </figure><!-- //. figure -->
         <div class="content">
           <h3 class="card_title">Production</h3>
@@ -153,7 +153,7 @@
       </article><!-- //. card_1 -->
       <article class="card card_2">
         <figure class="figure">
-          <img class="img" src="./img/Execution_Dis.png" alt="Distribution" />
+          <img class="image" src="./img/Execution_Dis.png" alt="Distribution" />
         </figure><!-- //. figure -->
         <div class="content">
           <h3 class="card_title">Distribution</h3>
@@ -162,7 +162,7 @@
       </article><!-- //. card_2 -->
       <article class="card card_3">
         <figure class="figure">
-          <img class="img" src="./img/Execution_Par.png" alt="Partners" />
+          <img class="image" src="./img/Execution_Par.png" alt="Partners" />
         </figure><!-- //. figure -->
         <div class="content">
           <h3 class="card_title">Partners</h3>
@@ -171,7 +171,7 @@
       </article><!-- //. card_3 -->
       <article class="card card_4">
         <figure class="figure">
-          <img class="img" src="./img/Execution_Mar.png" alt="Marketing" />
+          <img class="image" src="./img/Execution_Mar.png" alt="Marketing" />
         </figure><!-- //. figure -->
         <div class="content">
           <h3 class="card_title">Marketing</h3>
@@ -180,6 +180,118 @@
       </article><!-- //. card_4 -->
     </div><!-- //. container -->
   </section><!-- //. execution -->
+    <section class="proof">
+      <div class="title">
+        <h2 class="title">Proof</h2>
+        <p class="sub">Signals that evidence growth and monetization readiness.</p>
+      </div><!-- //. title -->
+      <div class="container">
+        <article class="card card_1">
+          <figure class="figure">
+            <img class="image" src="./img/Proof_Rating.png" alt="Ratings chart" />
+          </figure><!-- //. figure -->
+          <div class="content">
+            <div class="stat">Final 24.9%</div>
+            <div class="source">* Source/period</div>
+            <div class="label">Ratings</div>
+          </div><!-- //. content -->
+        </article><!-- //. card_1 -->
+        <article class="card card_2">
+          <figure class="figure">
+            <img class="image" src="./img/Proof_Ott.png" alt="OTT ranking" />
+          </figure><!-- //. figure -->
+          <div class="content">
+            <div class="stat">Top 10 for 15 weeks<br />Peak #1</div>
+            <div class="source">* Source/period</div>
+            <div class="label">OTT</div>
+          </div><!-- //. content -->
+        </article><!-- //. card_2 -->
+        <article class="card card_3">
+          <figure class="figure">
+            <img class="image" src="./img/Proof_OverSeas.png" alt="Overseas map" />
+          </figure><!-- //. figure -->
+          <div class="content">
+            <div class="stat">Launched in 45 countries<br />Regional heatmap</div>
+            <div class="source">* Source/period</div>
+            <div class="label">Overseas</div>
+          </div><!-- //. content -->
+        </article><!-- //. card_3 -->
+        <article class="card card_4">
+          <figure class="figure">
+            <img class="image" src="./img/Proof_Media.png" alt="Media mentions" />
+          </figure><!-- //. figure -->
+          <div class="content">
+            <div class="stat">120 earned mentions<br />+80% search lift</div>
+            <div class="source">* Source/period</div>
+            <div class="label">Media</div>
+          </div><!-- //. content -->
+        </article><!-- //. card_4 -->
+        <article class="card card_5">
+          <figure class="figure">
+            <img class="image" src="./img/Proof_Fandom.png" alt="Fandom stats" />
+          </figure><!-- //. figure -->
+          <div class="content">
+            <div class="stat">Higher completion<br />More UGC</div>
+            <div class="source">* Source/period</div>
+            <div class="label">Fandom</div>
+          </div><!-- //. content -->
+        </article><!-- //. card_5 -->
+        <article class="card card_6">
+          <figure class="figure">
+            <img class="image" src="./img/Proof_Posters.png" alt="Stills and posters" />
+          </figure><!-- //. figure -->
+          <div class="content">
+            <div class="desc">(stills/posters)</div>
+          </div><!-- //. content -->
+        </article><!-- //. card_6 -->
+      </div><!-- //. container -->
+    </section><!-- //. proof --> 
+        <section class="monetization_bridge">
+      <div class="title">
+        <h2 class="title">Monetization Bridge</h2>
+        <p class="sub">Diversified revenue mix anchored by distribution and IP licensing.</p>
+      </div><!-- //. title -->
+      <div class="container">
+        <article class="bar bar_1">
+          <div class="label">Broadcast</div>
+          <div class="chart">
+            <div class="fill"></div>
+            <div class="percent">56%</div>
+          </div><!-- //. chart -->
+        </article><!-- //. bar_1 -->
+        <article class="bar bar_2">
+          <div class="label">OTT</div>
+          <div class="chart">
+            <div class="fill"></div>
+            <div class="percent">64%</div>
+          </div><!-- //. chart -->
+        </article><!-- //. bar_2 -->
+        <article class="bar bar_3">
+          <div class="label">Overseas</div>
+          <div class="chart">
+            <div class="fill"></div>
+            <div class="percent">60%</div>
+          </div><!-- //. chart -->
+        </article><!-- //. bar_3 -->
+        <article class="bar bar_4">
+          <div class="label">Licensing</div>
+          <div class="chart">
+            <div class="fill"></div>
+            <div class="percent">7%</div>
+          </div><!-- //. chart -->
+        </article><!-- //. bar_4 -->
+        <article class="bar bar_5">
+          <div class="label">PPL</div>
+          <div class="chart">
+            <div class="fill"></div>
+            <div class="percent">6%</div>
+          </div><!-- //. chart -->
+        </article><!-- //. bar_5 -->
+        <footer class="note">
+          <p class="text">Notes: Showing mix (%) rather than amounts. Specify basis/period.</p>
+        </footer><!-- //. note -->
+      </div><!-- //. container -->
+    </section><!-- //. monetization_bridge --> 
   </main>
         <footer class="footer">
             <div class="footer_inner">
