--- a/viewer’splayground_moon.html
+++ b/viewer’splayground_moon.html
@@ -25,7 +25,7 @@
       <div class="header_bg">
       </div>
       <div class="inner">
-        <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+        <h1><a href="#" class="logo"><img src="asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
         <nav>
           <ul class="gnb">
             <li class=""><a href="#">ABOUT</a>
@@ -72,7 +72,7 @@
               <a href="#">KR</a>
             </div><!-- //.lang -->
             <div class="user">
-              <a href="#"><img src="back/img/user.png" alt="user"></a>
+              <a href="#"><img src="asset/user.png" alt="user"></a>
             </div><!-- //.user -->
             <div class="ham">
               <ul>
@@ -96,59 +96,51 @@
               <h4>
                 Deadline: 2025-11-10 23:59 UTC
               </h4>
-              <div class="datecounter">
-                <div class="countBox">
-                  <div class="numBox">
+              <div class="counter">
+                <div class="countBoxes">
+                  <div class="countBox">
                     <div class="countNum">30</div>
                   </div>
-                  <p>Days</p>
-                </div>
-                <div class="countBox">
-                  <div class="numBox">
+                  <div class="countBox">
                     <div class="countNum">11</div>
                   </div>
-                  <p>Hours</p>
-                </div>
-                <div class="countBox">
-                  <div class="numBox">
+                  <div class="countBox">
                     <div class="countNum">02</div>
                   </div>
-                  <p>Minutes</p>
-                </div>
-                <div class="countBox">
-                  <div class="numBox">
+                  <div class="countBox">
                     <div class="countNum">46</div>
                   </div>
+                </div><!-- .countBoxes -->
+                <div class="txtbox">
+                  <p>Days</p>
+                  <p>Hours</p>
+                  <p>Minutes</p>
                   <p>Seconds</p>
-                </div>
-              </div>
-            </div><!-- deadline -->
+                </div><!-- .txtbox -->
+              </div><!-- .counter -->
+            </div><!-- .deadline -->
             <article>
               <div class="textbox">
                 <div class="subtitle">
                   The 2nd Short Script Contest - A Letter Without a Name
                 </div>
-                <p>
-                  Subject : A letter arrives for someone anonymous.
-                  <br />
-                  Required : 2 logline sentences, 2-4 main characters, up to 600–800
-                  words synopsis, 3 tone tags
-                  <br />
-                  Guidelines: Do not disclose real addresses or personal information;
-                  <br />
-                  prohibit hate speech or discriminatory expressions.
-                  <br />
-                  Language: English only
-                </p>
+                
+                <ul>
+                  <li>Subject : A letter arrives for someone anonymous.</li>
+                  <li>Required : 2 logline sentences, 2-4 main characters, up to 600–800 words synopsis, 3 tone tags</li>
+                  <li>Guidelines: Do not disclose real addresses or personal information;</li>
+                  <li>prohibit hate speech or discriminatory expressions.</li>
+                  <li>Language: English only</li>
+                </ul>
               </div>
               <a href="#" class="btn"><em>Join</em></a>
             </article>
-          </div>
-        </div>
+          </div><!-- .info -->
+        </div><!-- .con -->
       </section><!-- .running-contest -->
       <section class="contest-winner">
         <div class="top">
-          <img class="decoImg" src="../StudioDragon/moon/asset/goldcup.png" />
+          <div class="decoImg"></div>
           <div class="title">
             <h2>1st Video Contest Winners</h2>
             <p>
@@ -157,37 +149,20 @@
               We celebrate the creativity and passion of our contest winners.
             </p>
           </div>
-        </div>
+        </div><!-- top -->
         <div class="wrap">
           <div class="video-content-box">
-            <div class="blur-1"></div>
-            <div class="blur-2"></div>
-            <div class="video" style="
-                          background: url(video0.png) center;
-                          background-size: cover;
-                          background-repeat: no-repeat;
-                        ">
-              <div class="info-overlay">
-                <div class="progress-section">
-                  <div class="progress-bar-wrap">
-                    <div class="icon-pause">
-                      <div class="rectangle-50"></div>
-                      <div class="rectangle-51"></div>
-                    </div>
-                    <div class="progress-bar">
-                      <div class="bar"></div>
-                    </div>
-                  </div>
-                  <div class="_00-20">00:20</div>
-                </div>
-              </div>
-            </div>
+            <iframe src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1" title="Gold Award | Title : Typo of Sorry | Nickname : rainyroom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="award-info">
               <h3 class="award">Gold Award</h3>
               <div class="txtbox">
                 <ul class="subtitle">
-                  <li><p>Title : Typo of Sorry</p></li>
-                  <li><p>Nickname : rainyroom</p></li>
+                  <li>
+                    <p>Title : Typo of Sorry</p>
+                  </li>
+                  <li>
+                    <p>Nickname : rainyroom</p>
+                  </li>
                   <li>
                     <em>Acceptance comment:
                       <br />
@@ -200,41 +175,26 @@
                     </em>
                   </li>
                 </ul>
-              </div>
-            </div>
+              </div><!-- .txtbox -->
+            </div><!-- .award-info -->
             <img class="gold" src="gold0.png" />
-          </div>
-          <div class="video-content-box">
             <div class="blur-1"></div>
             <div class="blur-2"></div>
-            <div class="video" style="
-                          background: url(video1.png) center;
-                          background-size: cover;
-                          background-repeat: no-repeat;
-                        ">
-              <div class="info-overlay">
-                <div class="progress-section">
-                  <div class="progress-bar-wrap">
-                    <div class="icon-pause">
-                      <div class="rectangle-50"></div>
-                      <div class="rectangle-51"></div>
-                    </div>
-                    <div class="progress-bar">
-                      <div class="bar"></div>
-                    </div>
-                  </div>
-                  <div class="_00-20">00:20</div>
-                </div>
-              </div>
-            </div>
+          </div><!-- .video-content-box -->
+          <div class="video-content-box">
+            <iframe src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1" title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="award-info">
-              <div class="award">Silver Award</div>
+              <h3 class="award">Silver Award</h3>
               <div class="txtbox">
                 <ul class="subtitle">
-                  <li>Title : The Fire Inside</li>
-                  <li>Nickname : rainyroom</li>
                   <li>
-                    <p>Acceptance comment:
+                    <p>Title : The Fire Inside</p>
+                  </li>
+                  <li>
+                    <p>Nickname : bloom</p>
+                  </li>
+                  <li>
+                    <em>Acceptance comment:
                       <br />
                       “I truly enjoyed watching The Glory, and many of its scenes stayed
                       with me long after. I created this video inspired by the unspoken
@@ -242,61 +202,107 @@
                       honor to receive this award, and I’m thankful for the chance to share
                       my interpretation. This experience motivates me to keep creating
                       stories that connect with others.”
-                    </p>
+                    </em>
                   </li>
                 </ul>
-              </div>
-            </div>
+              </div><!-- .txtbox -->
+            </div><!-- .award-info -->
             <img class="silver" src="silver0.png" />
-          </div>
-          <div class="video-content-box">
             <div class="blur-1"></div>
             <div class="blur-2"></div>
-            <div class="video" style="
-                          background: url(video2.png) center;
-                          background-size: cover;
-                          background-repeat: no-repeat;
-                        ">
-              <div class="info-overlay">
-                <div class="progress-section">
-                  <div class="progress-bar-wrap">
-                    <div class="icon-pause">
-                      <div class="rectangle-50"></div>
-                      <div class="rectangle-51"></div>
-                    </div>
-                    <div class="progress-bar">
-                      <div class="bar"></div>
-                    </div>
-                  </div>
-                  <div class="_00-20">00:20</div>
-                </div>
-              </div>
-            </div>
+          </div>
+          <div class="video-content-box">
+            <iframe src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1" title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="award-info">
-              <div class="award">Popular Choice</div>
+              <h3 class="award">Silver Award</h3>
               <div class="txtbox">
                 <ul class="subtitle">
-                  <li>Title : Read Receipt, Unsent</li>
-                  <li>Nickname : mintlatte</li>
                   <li>
-                    <p>Acceptance comment:
+                    <p>Title : Read Receipt, Unsent</p>
+                  </li>
+                  <li>
+                    <p>Nickname : mintlatte</p>
+                  </li>
+                  <li>
+                    <em>Acceptance comment:
                       <br />
                       “My goal was to win the Gold Award, but receiving the Popular Choice
                       still feels deeply rewarding. This project took a lot of effort and
                       late nights, so being recognized by viewers means a lot to me. It’s
                       heartwarming to know that people connected with my work. I’ll remember
                       this encouragement and keep challenging myself to do even better.”
-                    </p>
+                    </em>
                   </li>
                 </ul>
-              </div>
-            </div>
+              </div><!-- .txtbox -->
+            </div><!-- .award-info -->
             <img class="silver2" src="silver1.png" />
+            <div class="blur-1"></div>
+            <div class="blur-2"></div>
           </div>
-        </div>
+        </div><!-- .wrap -->
       </section><!-- .contest-winner -->
     </main>
-  </div>
+    <footer class="footer">
+      <div class="footer_inner">
+        <!-- Top Area -->
+        <div class="footer_top">
+          <div class="footer_menu">
+            <div class="footer_gnb">
+              <a href="#" class="footer_gnb_link home">Home</a>
+              <div class="footer_gnb_wrap">
+                <ul class="footer_gnb_list">
+                  <li><a href="#" class="footer_gnb_link">Hotline</a></li>
+                  <li><a href="#" class="footer_gnb_link">Recruitment</a></li>
+                  <li><a href="#" class="footer_gnb_link">Contact Us</a></li>
+                  <li><a href="#" class="footer_gnb_link">Sitemap</a></li>
+                </ul><!-- //.footer_gnb_list -->
+
+                <div class="footer_family_site">
+                  <button type="button" class="family_site_btn">
+                    <span>Family Site</span>
+                    <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
+                  </button>
+                  <ul class="family_site_list">
+                    <li><a href="#" class="family_site_link">CJ ENM</a></li>
+                    <li><a href="#" class="family_site_link">CJ GROUP</a></li>
+                  </ul><!-- //.family_site_list -->
+                </div><!-- //.footer_family_site -->
+              </div><!-- //.footer_gnb_wrap -->
+            </div><!-- //.footer_gnb -->
+          </div><!-- //.footer_menu -->
+        </div><!-- //.footer_top -->
+
+        <!-- Bottom Area -->
+        <div class="footer_bottom">
+          <div class="footer_brand">
+            <div class="footer_logo">
+              <img src="asset/logo_w.png" alt="Studio Dragon">
+            </div><!-- //.footer_logo -->
+
+            <div class="footer_sns">
+              <a href="#" class="sns_link" aria-label="Facebook">
+                <img src="asset/facebook.svg" alt="Facebook">
+              </a>
+              <a href="#" class="sns_link" aria-label="YouTube">
+                <img src="asset/youtube.svg" alt="YouTube">
+              </a>
+              <a href="#" class="sns_link" aria-label="Instagram">
+                <img src="asset/Instagram.svg" alt="Instagram">
+              </a>
+            </div><!-- //.footer_sns -->
+          </div><!-- //.footer_brand -->
+
+          <div class="footer_info">
+            <p class="footer_info_text">CEO : Jang Kyung-ik</p>
+            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul, Republic of
+              Korea | Business registration number : 747-81-00388</p>
+            <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
+          </div><!-- //.footer_info -->
+        </div><!-- //.footer_bottom -->
+      </div><!-- //.footer_inner -->
+    </footer><!-- //.footer -->
+  </div><!-- //.wrap -->
 </body>
 
 </html>
