--- a/IR_Kwon/IR.html
+++ b/IR_Kwon/IR.html
@@ -256,42 +256,78 @@
           <div class="label">Broadcast</div>
           <div class="chart">
             <div class="fill"></div>
-            <div class="percent">56%</div>
           </div><!-- //. chart -->
+          <div class="percent">56%</div>
         </article><!-- //. bar_1 -->
         <article class="bar bar_2">
           <div class="label">OTT</div>
           <div class="chart">
             <div class="fill"></div>
-            <div class="percent">64%</div>
           </div><!-- //. chart -->
+          <div class="percent">64%</div>
         </article><!-- //. bar_2 -->
         <article class="bar bar_3">
           <div class="label">Overseas</div>
           <div class="chart">
             <div class="fill"></div>
-            <div class="percent">60%</div>
           </div><!-- //. chart -->
+          <div class="percent">60%</div>
         </article><!-- //. bar_3 -->
         <article class="bar bar_4">
           <div class="label">Licensing</div>
           <div class="chart">
             <div class="fill"></div>
-            <div class="percent">7%</div>
           </div><!-- //. chart -->
+          <div class="percent">7%</div>
         </article><!-- //. bar_4 -->
         <article class="bar bar_5">
           <div class="label">PPL</div>
           <div class="chart">
             <div class="fill"></div>
-            <div class="percent">6%</div>
           </div><!-- //. chart -->
+          <div class="percent">6%</div>
         </article><!-- //. bar_5 -->
-        <footer class="note">
+        <div class="note">
           <p class="text">Notes: Showing mix (%) rather than amounts. Specify basis/period.</p>
-        </footer><!-- //. note -->
+        </div><!-- //. note -->
       </div><!-- //. container -->
     </section><!-- //. monetization_bridge --> 
+    <section class="moat_repeatability">
+      <div class="title">
+        <h2 class="title">Moat &amp; Repeatability</h2>
+        <p class="sub">Not luck, a repeatable playbook. These levers drive hit probability and margin structure.</p>
+      </div><!-- //. title -->
+      <div class="container">
+        <article class="card card_1">
+          <div class="icon">🎬</div>
+          <div class="content">
+            <h3 class="card_title">Creator Pool</h3>
+            <p class="card_desc">Top writers / PD / DP / VFX network. Portfolio mix diversifies risk.</p>
+          </div><!-- //. content -->
+        </article><!-- //. card_1 -->
+        <article class="card card_2">
+          <div class="icon">🧭</div>
+          <div class="content">
+            <h3 class="card_title">Genre Portfolio</h3>
+            <p class="card_desc">Romance / thriller / period mix stabilizes quarterly volatility.</p>
+          </div><!-- //. content -->
+        </article><!-- //. card_2 -->
+        <article class="card card_3">
+          <div class="icon">🧩</div>
+          <div class="content">
+            <h3 class="card_title">Format &amp; Spin-offs</h3>
+            <p class="card_desc">Season, spin-off, remake expansions maximize IP LTV.</p>
+          </div><!-- //. content -->
+        </article><!-- //. card_3 -->
+        <article class="card card_4">
+          <div class="icon">📊</div>
+          <div class="content">
+            <h3 class="card_title">Data-Driven Development</h3>
+            <p class="card_desc">Trailer/pilot A/B and regional retention feed the dev loop.</p>
+          </div><!-- //. content -->
+        </article><!-- //. card_4 -->
+      </div><!-- //. container -->
+    </section><!-- //. moat_repeatability -->
   </main>
         <footer class="footer">
             <div class="footer_inner">
