--- a/IR_Kwon/IR.html
+++ b/IR_Kwon/IR.html
@@ -328,6 +328,48 @@
         </article><!-- //. card_4 -->
       </div><!-- //. container -->
     </section><!-- //. moat_repeatability -->
+    <section class="forward_triggers">
+      <div class="title">
+        <h2 class="title">Forward Triggers</h2>
+        <p class="sub">Milestones that could unlock additional value.</p>
+      </div><!-- //. title -->
+      <div class="container">
+        <div class="table">
+          <div class="header">
+            <div class="cell">Area</div>
+            <div class="cell">Severity</div>
+            <div class="cell">Mitigation</div>
+            <div class="cell">Status</div>
+          </div><!-- //. header -->
+          <div class="body">
+            <div class="row">
+              <div class="cell area">Slot Confirmation</div>
+              <div class="cell severity">
+                <span class="pill">Q1'26</span>
+              </div>
+              <div class="cell mitigation">Domestic scheduling &amp; quality check completed; overseas delivery coordination in progress.</div>
+              <div class="cell status">On track</div>
+            </div><!-- //. row -->
+            <div class="row">
+              <div class="cell area">Additional Overseas</div>
+              <div class="cell severity">
+                <span class="pill">Q3'25</span>
+              </div>
+              <div class="cell mitigation">Partner shortlist confirmed; MG and revenue-share negotiation underway; local compliance review.</div>
+              <div class="cell status">Monitoring</div>
+            </div><!-- //. row -->
+            <div class="row">
+              <div class="cell area">Season 2 Greenlight</div>
+              <div class="cell severity">
+                <span class="pill">TBD</span>
+              </div>
+              <div class="cell mitigation">Script finalized; casting availability secured; platform alignment and budget package preparation.</div>
+              <div class="cell status">Pending</div>
+            </div><!-- //. row -->
+          </div><!-- //. body -->
+        </div><!-- //. table -->
+      </div><!-- //. container -->
+    </section><!-- //. forward_triggers -->
   </main>
         <footer class="footer">
             <div class="footer_inner">
