--- a/IR_Kwon/IR.html
+++ b/IR_Kwon/IR.html
@@ -25,7 +25,7 @@
             <div class="header_bg">
             </div>
             <div class="inner">
-                <h1><a href="#" class="logo"><img src="/asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="#" class="logo"><img src="asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav>
                     <ul class="gnb">
                         <li class=""><a href="#">ABOUT</a>
@@ -72,7 +72,7 @@
                             <a href="#">KR</a>
                         </div><!-- //.lang -->
                         <div class="user">
-                            <a href="#"><img src="/asset/user.png" alt="user"></a>
+                            <a href="#"><img src="asset/user.png" alt="user"></a>
                         </div><!-- //.user -->
                         <div class="ham">
                             <ul>
@@ -371,7 +371,7 @@
       </div><!-- //. container -->
     </section><!-- //. forward_triggers -->
   </main>
-        <footer class="footer">
+        <footer class="ver_dark ver_white">
             <div class="footer_inner">
                 <!-- Top Area -->
                 <div class="footer_top">
@@ -387,14 +387,16 @@
                                 </ul><!-- //.footer_gnb_list -->
 
                                 <div class="footer_family_site">
-                                    <button type="button" class="family_site_btn">
-                                        <span>Family Site</span>
-                                        <img src="asset/up.svg"
-                                            alt="arrow" class="family_site_arrow">
-                                    </button>
                                     <ul class="family_site_list">
                                         <li><a href="#" class="family_site_link">CJ ENM</a></li>
                                         <li><a href="#" class="family_site_link">CJ GROUP</a></li>
+                                        <li class="family_site_btn_wrap">
+                                            <button type="button" class="family_site_btn">
+                                                <span>Family Site</span>
+                                                <img src="asset/up.svg"
+                                                    alt="arrow" class="family_site_arrow">
+                                            </button>
+                                        </li>
                                     </ul><!-- //.family_site_list -->
                                 </div><!-- //.footer_family_site -->
                             </div><!-- //.footer_gnb_wrap -->
@@ -406,8 +408,7 @@
                 <div class="footer_bottom">
                     <div class="footer_brand">
                         <div class="footer_logo">
-                            <img src="asset/logo_w.png"
-                                alt="Studio Dragon">
+                            
                         </div><!-- //.footer_logo -->
 
                         <div class="footer_sns">
@@ -436,5 +437,4 @@
         </footer><!-- //.footer -->
     </div><!-- //.wrap -->
 </body>
-
 </html>
