--- a/main_beck.html
+++ b/main_beck.html
@@ -22,12 +22,12 @@
 
 <body>
     <div class="wrap">
+        <div class="header_bg">
+        </div>
         <header class="">
-            <div class="header_bg">
-            </div>
             <div class="inner">
                 <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
-                <nav>
+                <nav class="">
                     <ul class="gnb">
                         <li class=""><a href="#">ABOUT</a>
                             <ul class="sub">
@@ -125,24 +125,32 @@
                         <button type="button">MORE</button>
                     </div>
                     <div class="CScontents1">
-                        <img src="./back/img/CS_img.png" alt="Taepung Corporation" data-aos="fade-up" data-aos-delay="500" data-aos-mirror="true">
+                        <img src="./back/img/CS_img.png" alt="Taepung Corporation" data-aos="fade-up"
+                            data-aos-delay="500" data-aos-mirror="true">
                         <div class="txt">
-                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">Typhoon Corporation</h3>
-                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">TVN & TVING<br>10/11 Saturday</p>
+                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">Typhoon Corporation
+                            </h3>
+                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">TVN & TVING<br>10/11
+                                Saturday</p>
                         </div>
                     </div>
                     <div class="CScontents2">
-                        <img src="./back/img/CS_img2.png" alt="Genie, Make a Wish" data-aos="fade-up" data-aos-delay="500" data-aos-mirror="true">
+                        <img src="./back/img/CS_img2.png" alt="Genie, Make a Wish" data-aos="fade-up"
+                            data-aos-delay="500" data-aos-mirror="true">
                         <div class="txt">
-                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">Genie, Make a Wish</h3>
-                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">Netflix<br>10/03 Friday</p>
+                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">Genie, Make a Wish
+                            </h3>
+                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">Netflix<br>10/03 Friday
+                            </p>
                         </div>
                     </div>
                     <div class="CScontents3">
-                        <img src="./back/img/CS_img3.png" alt="pro bono" data-aos="fade-up" data-aos-delay="500" data-aos-mirror="true">
+                        <img src="./back/img/CS_img3.png" alt="pro bono" data-aos="fade-up" data-aos-delay="500"
+                            data-aos-mirror="true">
                         <div class="txt">
                             <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">pro bono</h3>
-                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">TVING <br> 2025~2026</p>
+                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">TVING <br> 2025~2026
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -156,7 +164,7 @@
 
         </main>
 
-       <footer class="ver_white">
+        <footer class="ver_white">
             <div class="footer_inner">
                 <!-- Top Area -->
                 <div class="footer_top">
@@ -178,8 +186,7 @@
                                         <li class="family_site_btn_wrap">
                                             <button type="button" class="family_site_btn">
                                                 <span>Family Site</span>
-                                                <img src="asset/up.svg"
-                                                    alt="arrow" class="family_site_arrow">
+                                                <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
                                             </button>
                                         </li>
                                     </ul><!-- //.family_site_list -->
@@ -193,28 +200,26 @@
                 <div class="footer_bottom">
                     <div class="footer_brand">
                         <div class="footer_logo">
-                            
+
                         </div><!-- //.footer_logo -->
 
                         <div class="footer_sns">
                             <a href="#" class="sns_link" aria-label="Facebook">
-                                <img src="asset/facebook.svg"
-                                    alt="Facebook">
+                                <img src="asset/facebook.svg" alt="Facebook">
                             </a>
                             <a href="#" class="sns_link" aria-label="YouTube">
-                                <img src="asset/youtube.svg"
-                                    alt="YouTube">
+                                <img src="asset/youtube.svg" alt="YouTube">
                             </a>
                             <a href="#" class="sns_link" aria-label="Instagram">
-                                <img src="asset/Instagram.svg"
-                                    alt="Instagram">
+                                <img src="asset/Instagram.svg" alt="Instagram">
                             </a>
                         </div><!-- //.footer_sns -->
                     </div><!-- //.footer_brand -->
 
                     <div class="footer_info">
                         <p class="footer_info_text">CEO : Jang Kyung-ik</p>
-                        <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
+                        <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu, Seoul,
+                            Republic of Korea | Business registration number : 747-81-00388</p>
                         <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
                     </div><!-- //.footer_info -->
                 </div><!-- //.footer_bottom -->
