--- a/IR.html
+++ b/IR.html
@@ -10,14 +10,14 @@
     <title>studiodragon</title>
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/main_media.css">
-    <link rel="stylesheet" href="./css/main_style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/main_media.css">
+    <link rel="stylesheet" href="IR_Kwon/css/main_style.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="/js/common.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="js/common.js"></script>
+    <script src="IR_Kwon/js/main.js"></script>
 </head>
 <body>
     <div class="wrap">
@@ -93,7 +93,7 @@
     </div><!-- //. title -->
     <div class="container">
       <figure class="figure">
-        <img class="image" src="./img/Value_Drivers_Img.png" alt="Value Drivers" />
+        <img class="image" src="IR_Kwon/img/Value_Drivers_Img.png" alt="Value Drivers" />
       </figure><!-- //. figure -->
       <div class="area">
         <article class="item item_1">
@@ -137,14 +137,15 @@
     </div><!-- //. container -->
   </section><!-- //. value_drivers -->
   <section class="execution">
-    <div class="title">
-      <h2 class="title">Execution</h2>
-      <p class="sub">Operational playbooks aligned to global releases.</p>
-    </div><!-- //. title -->
-    <div class="container">
+    <div class="inner">
+      <div class="title">
+        <h2 class="title">Execution</h2>
+        <p class="sub">Operational playbooks aligned to global releases.</p>
+      </div><!-- //. title -->
+      <div class="container">
       <article class="card card_1">
         <figure class="figure">
-          <img class="image" src="./img/Execution_Pro.png" alt="Production" />
+          <img class="image" src="IR_Kwon/img/Execution_Pro.png" alt="Production" />
         </figure><!-- //. figure -->
         <div class="content">
           <h3 class="card_title">Production</h3>
@@ -153,7 +154,7 @@
       </article><!-- //. card_1 -->
       <article class="card card_2">
         <figure class="figure">
-          <img class="image" src="./img/Execution_Dis.png" alt="Distribution" />
+          <img class="image" src="IR_Kwon/img/Execution_Dis.png" alt="Distribution" />
         </figure><!-- //. figure -->
         <div class="content">
           <h3 class="card_title">Distribution</h3>
@@ -162,7 +163,7 @@
       </article><!-- //. card_2 -->
       <article class="card card_3">
         <figure class="figure">
-          <img class="image" src="./img/Execution_Par.png" alt="Partners" />
+          <img class="image" src="IR_Kwon/img/Execution_Par.png" alt="Partners" />
         </figure><!-- //. figure -->
         <div class="content">
           <h3 class="card_title">Partners</h3>
@@ -171,7 +172,7 @@
       </article><!-- //. card_3 -->
       <article class="card card_4">
         <figure class="figure">
-          <img class="image" src="./img/Execution_Mar.png" alt="Marketing" />
+          <img class="image" src="IR_Kwon/img/Execution_Mar.png" alt="Marketing" />
         </figure><!-- //. figure -->
         <div class="content">
           <h3 class="card_title">Marketing</h3>
@@ -179,6 +180,7 @@
         </div><!-- //. content -->
       </article><!-- //. card_4 -->
     </div><!-- //. container -->
+    </div><!-- //. inner -->
   </section><!-- //. execution -->
     <section class="proof">
       <div class="title">
@@ -188,7 +190,7 @@
       <div class="container">
         <article class="card card_1">
           <figure class="figure">
-            <img class="image" src="./img/Proof_Rating.png" alt="Ratings chart" />
+            <img class="image" src="IR_Kwon/img/Proof_Rating.png" alt="Ratings chart" />
           </figure><!-- //. figure -->
           <div class="content">
             <div class="stat">Final 24.9%</div>
@@ -198,7 +200,7 @@
         </article><!-- //. card_1 -->
         <article class="card card_2">
           <figure class="figure">
-            <img class="image" src="./img/Proof_Ott.png" alt="OTT ranking" />
+            <img class="image" src="IR_Kwon/img/Proof_Ott.png" alt="OTT ranking" />
           </figure><!-- //. figure -->
           <div class="content">
             <div class="stat">Top 10 for 15 weeks<br />Peak #1</div>
@@ -208,7 +210,7 @@
         </article><!-- //. card_2 -->
         <article class="card card_3">
           <figure class="figure">
-            <img class="image" src="./img/Proof_OverSeas.png" alt="Overseas map" />
+            <img class="image" src="IR_Kwon/img/Proof_OverSeas.png" alt="Overseas map" />
           </figure><!-- //. figure -->
           <div class="content">
             <div class="stat">Launched in 45 countries<br />Regional heatmap</div>
@@ -218,7 +220,7 @@
         </article><!-- //. card_3 -->
         <article class="card card_4">
           <figure class="figure">
-            <img class="image" src="./img/Proof_Media.png" alt="Media mentions" />
+            <img class="image" src="IR_Kwon/img/Proof_Media.png" alt="Media mentions" />
           </figure><!-- //. figure -->
           <div class="content">
             <div class="stat">120 earned mentions<br />+80% search lift</div>
@@ -228,7 +230,7 @@
         </article><!-- //. card_4 -->
         <article class="card card_5">
           <figure class="figure">
-            <img class="image" src="./img/Proof_Fandom.png" alt="Fandom stats" />
+            <img class="image" src="IR_Kwon/img/Proof_Fandom.png" alt="Fandom stats" />
           </figure><!-- //. figure -->
           <div class="content">
             <div class="stat">Higher completion<br />More UGC</div>
@@ -238,7 +240,7 @@
         </article><!-- //. card_5 -->
         <article class="card card_6">
           <figure class="figure">
-            <img class="image" src="./img/Proof_Posters.png" alt="Stills and posters" />
+            <img class="image" src="IR_Kwon/img/Proof_Posters.png" alt="Stills and posters" />
           </figure><!-- //. figure -->
           <div class="content">
             <div class="desc">(stills/posters)</div>
@@ -247,10 +249,11 @@
       </div><!-- //. container -->
     </section><!-- //. proof --> 
         <section class="monetization_bridge">
-      <div class="title">
-        <h2 class="title">Monetization Bridge</h2>
-        <p class="sub">Diversified revenue mix anchored by distribution and IP licensing.</p>
-      </div><!-- //. title -->
+      <div class="inner">
+        <div class="title">
+          <h2 class="title">Monetization Bridge</h2>
+          <p class="sub">Diversified revenue mix anchored by distribution and IP licensing.</p>
+        </div><!-- //. title -->
       <div class="container">
         <article class="bar bar_1">
           <div class="label">Broadcast</div>
@@ -291,6 +294,7 @@
           <p class="text">Notes: Showing mix (%) rather than amounts. Specify basis/period.</p>
         </div><!-- //. note -->
       </div><!-- //. container -->
+      </div><!-- //. inner -->
     </section><!-- //. monetization_bridge --> 
     <section class="moat_repeatability">
       <div class="title">
@@ -329,10 +333,11 @@
       </div><!-- //. container -->
     </section><!-- //. moat_repeatability -->
     <section class="forward_triggers">
-      <div class="title">
-        <h2 class="title">Forward Triggers</h2>
-        <p class="sub">Milestones that could unlock additional value.</p>
-      </div><!-- //. title -->
+      <div class="inner">
+        <div class="title">
+          <h2 class="title">Forward Triggers</h2>
+          <p class="sub">Milestones that could unlock additional value.</p>
+        </div><!-- //. title -->
       <div class="container">
         <div class="table">
           <div class="header">
@@ -369,7 +374,61 @@
           </div><!-- //. body -->
         </div><!-- //. table -->
       </div><!-- //. container -->
+      </div><!-- //. inner -->
     </section><!-- //. forward_triggers -->
+    <section class="risks_mitigation">
+      <div class="title">
+        <h2 class="title">Risks &amp; Mitigation</h2>
+        <p class="sub">Top-3 risks with mitigations. A mini impact meter justifies the level.</p>
+      </div><!-- //. title -->
+      <div class="container">
+        <article class="card card_1">
+          <div class="header">
+            <div class="risk_name">
+              <span class="icon">⚠️</span>
+              <span class="text">Production</span>
+            </div><!-- //. risk_name -->
+            <div class="level level_med">MED</div>
+          </div><!-- //. header -->
+          <div class="meter">
+            <div class="fill"></div>
+          </div><!-- //. meter -->
+          <div class="content">
+            <p class="text"><strong>Mitigation:</strong> Add schedule buffer, parallelize post, pre-approve alt sets/locations</p>
+          </div><!-- //. content -->
+        </article><!-- //. card_1 -->
+        <article class="card card_2">
+          <div class="header">
+            <div class="risk_name">
+              <span class="icon">💱</span>
+              <span class="text">FX</span>
+            </div><!-- //. risk_name -->
+            <div class="level level_high">HIGH</div>
+          </div><!-- //. header -->
+          <div class="meter">
+            <div class="fill"></div>
+          </div><!-- //. meter -->
+          <div class="content">
+            <p class="text"><strong>Mitigation:</strong> Hedge major currencies, diversify contract currency, shorten settlement cycle</p>
+          </div><!-- //. content -->
+        </article><!-- //. card_2 -->
+        <article class="card card_3">
+          <div class="header">
+            <div class="risk_name">
+              <span class="icon">🧾</span>
+              <span class="text">Policy/Compliance</span>
+            </div><!-- //. risk_name -->
+            <div class="level level_low">LOW</div>
+          </div><!-- //. header -->
+          <div class="meter">
+            <div class="fill"></div>
+          </div><!-- //. meter -->
+          <div class="content">
+            <p class="text"><strong>Mitigation:</strong> Pre-review checklist, sensitive-content guardrails, alternate cut plan</p>
+          </div><!-- //. content -->
+        </article><!-- //. card_3 -->
+      </div><!-- //. container -->
+    </section><!-- //. risks_mitigation -->
   </main>
         <footer class="ver_dark ver_white">
             <div class="footer_inner">
