공모전, 수상자 섹션 html, css 수정

--- a/viewer’splayground_moon.html
+++ b/viewer’splayground_moon.html
@@ -21,6 +21,7 @@
 
 <body>
   <div class="wrap">
+    <!-- 헤더 -->
     <header class="">
       <div class="header_bg">
       </div>
@@ -85,7 +86,10 @@
         </nav>
       </div><!-- //.inner -->
     </header>
+
+    <!-- 메인 -->
     <main>
+      <!-- 진행중인 공모전 -->
       <section class="running-contest">
         <div class="title">
           <h2>Running Contest<h2>
@@ -97,26 +101,22 @@
                 Deadline: 2025-11-10 23:59 UTC
               </h4>
               <div class="counter">
-                <div class="countBoxes">
-                  <div class="countBox">
-                    <div class="countNum">30</div>
-                  </div>
-                  <div class="countBox">
-                    <div class="countNum">11</div>
-                  </div>
-                  <div class="countBox">
-                    <div class="countNum">02</div>
-                  </div>
-                  <div class="countBox">
-                    <div class="countNum">46</div>
-                  </div>
-                </div><!-- .countBoxes -->
-                <div class="txtbox">
+                <div class="countbox">
+                  <span>30</span>
                   <p>Days</p>
+                </div>
+                <div class="countbox">
+                  <span>11</span>
                   <p>Hours</p>
+                </div>
+                <div class="countbox">
+                  <span>02</span>
                   <p>Minutes</p>
+                </div>
+                <div class="countbox">
+                  <span>46</span>
                   <p>Seconds</p>
-                </div><!-- .txtbox -->
+                </div>
               </div><!-- .counter -->
             </div><!-- .deadline -->
             <article>
@@ -124,20 +124,23 @@
                 <div class="subtitle">
                   The 2nd Short Script Contest - A Letter Without a Name
                 </div>
-                
+
                 <ul>
                   <li>Subject : A letter arrives for someone anonymous.</li>
-                  <li>Required : 2 logline sentences, 2-4 main characters, up to 600–800 words synopsis, 3 tone tags</li>
+                  <li>Required : 2 logline sentences, 2-4 main characters, up to 600–800 words synopsis, 3 tone tags
+                  </li>
                   <li>Guidelines: Do not disclose real addresses or personal information;</li>
                   <li>prohibit hate speech or discriminatory expressions.</li>
                   <li>Language: English only</li>
                 </ul>
               </div>
-              <a href="#" class="btn"><em>Join</em></a>
+              <a href="#" class="btn">Join</a>
             </article>
           </div><!-- .info -->
         </div><!-- .con -->
       </section><!-- .running-contest -->
+
+      <!-- 공모전 수상자 -->
       <section class="contest-winner">
         <div class="top">
           <div class="decoImg"></div>
@@ -150,9 +153,13 @@
             </p>
           </div>
         </div><!-- top -->
-        <div class="wrap">
+        <div class="winner-wrap">
           <div class="video-content-box">
-            <iframe src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1" title="Gold Award | Title : Typo of Sorry | Nickname : rainyroom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe
+              src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
+              title="Gold Award | Title : Typo of Sorry | Nickname : rainyroom" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="award-info">
               <h3 class="award">Gold Award</h3>
               <div class="txtbox">
@@ -177,13 +184,16 @@
                 </ul>
               </div><!-- .txtbox -->
             </div><!-- .award-info -->
-            <img class="gold" src="gold0.png" />
-            <div class="blur-1"></div>
-            <div class="blur-2"></div>
+
+
           </div><!-- .video-content-box -->
           <div class="video-content-box">
-            <iframe src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1" title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <div class="award-info">
+            <iframe
+              src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
+              title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="">
               <h3 class="award">Silver Award</h3>
               <div class="txtbox">
                 <ul class="subtitle">
@@ -208,13 +218,19 @@
               </div><!-- .txtbox -->
             </div><!-- .award-info -->
             <img class="silver" src="silver0.png" />
-            <div class="blur-1"></div>
-            <div class="blur-2"></div>
-          </div>
+            <div class="circles">
+              <div class="blur-1"></div>
+              <div class="blur-2"></div>
+            </div>
+          </div><!-- video-content-box -->
           <div class="video-content-box">
-            <iframe src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1" title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe
+              src="https://www.youtube.com/embed/L925sfLdm2Q?autoplay=1&mute=1&loop=1&playlist=L925sfLdm2Q&playsinline=1"
+              title="Title : The Fire Inside | Nickname : rainyroom | Nickname : bloom" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="award-info">
-              <h3 class="award">Silver Award</h3>
+              <h3 class="award">Popular Choice</h3>
               <div class="txtbox">
                 <ul class="subtitle">
                   <li>
@@ -237,13 +253,18 @@
               </div><!-- .txtbox -->
             </div><!-- .award-info -->
             <img class="silver2" src="silver1.png" />
-            <div class="blur-1"></div>
-            <div class="blur-2"></div>
-          </div>
+            <div class="circles">
+              <div class="blur-1"></div>
+              <div class="blur-2"></div>
+            </div>
+          </div><!-- video-content-box -->
         </div><!-- .wrap -->
       </section><!-- .contest-winner -->
     </main>
-    <footer class="footer">
+
+
+    <!-- 푸터 -->
+    <footer class="ver_white">
       <div class="footer_inner">
         <!-- Top Area -->
         <div class="footer_top">
@@ -259,13 +280,15 @@
                 </ul><!-- //.footer_gnb_list -->
 
                 <div class="footer_family_site">
-                  <button type="button" class="family_site_btn">
-                    <span>Family Site</span>
-                    <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
-                  </button>
                   <ul class="family_site_list">
                     <li><a href="#" class="family_site_link">CJ ENM</a></li>
                     <li><a href="#" class="family_site_link">CJ GROUP</a></li>
+                    <li class="family_site_btn_wrap">
+                      <button type="button" class="family_site_btn">
+                        <span>Family Site</span>
+                        <img src="asset/up.svg" alt="arrow" class="family_site_arrow">
+                      </button>
+                    </li>
                   </ul><!-- //.family_site_list -->
                 </div><!-- //.footer_family_site -->
               </div><!-- //.footer_gnb_wrap -->
@@ -277,7 +300,7 @@
         <div class="footer_bottom">
           <div class="footer_brand">
             <div class="footer_logo">
-              <img src="asset/logo_w.png" alt="Studio Dragon">
+
             </div><!-- //.footer_logo -->
 
             <div class="footer_sns">
