--- a/IR.html
+++ b/IR.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/main_media.css">
     <link rel="stylesheet" href="IR_Kwon/css/main_style.css">
+    <link rel="stylesheet" href="IR_Kwon/css/main_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/common.js"></script>
