--- a/main_beck copy.html
+++ b/main_beck copy.html
@@ -10,12 +10,14 @@
     <title>studiodragon</title>
     <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/main_media.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/main_media.css">
+    <link rel="stylesheet" href="back/css/MainBeck_style.css">
+    <link rel="stylesheet" href="back/css/MainBack_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/common.js"></script>
+    <script src="./js/common.js"></script>
 </head>
 
 <body>
@@ -86,10 +88,83 @@
         </header>
 
 
+        <main>
+            <section class="circlebody">
+                <div id="circle">
+                    <article class="face1">
+                        <div class="poster"><img src="./back/img/img01.webp" alt="The Glory"></div>
+                    </article>
+                    <article class="face2">
+                        <div class="poster"><img src="./back/img/img02.webp" alt="Queen of Tears"></div>
+                    </article>
+                    <article class="face3">
+                        <div class="poster"><img src="./back/img/img03.webp" alt="Celebrity"></div>
+                    </article>
+                    <article class="face4">
+                        <div class="poster"><img src="./back/img/img04.webp" alt="Sweet Home"></div>
+                    </article>
+                    <article class="face5">
+                        <div class="poster"><img src="./back/img/img05.webp" alt="Guardian"></div>
+                    </article>
+                    <article class="face6">
+                        <div class="poster"><img src="./back/img/img06.webp" alt="Bon Appétit, Your Majesty"></div>
+                    </article>
+                    <article class="face7">
+                        <div class="poster"><img src="./back/img/img07.webp" alt="Genie, Make a Wish"></div>
+                    </article>
+                    <article class="face8">
+                        <div class="poster"><img src="./back/img/img08.webp" alt="Jeongnyeon: The Star Is Born"></div>
+                    </article>
+                </div>
+            </section><!-- //.wrap -->
+
+            <section class="comingsoon">
+                <div class="inner">
+                    <div class="top">
+                        <h2>COMING SOON</h2>
+                        <button type="button">MORE</button>
+                    </div>
+                    <div class="CScontents1">
+                        <img src="./back/img/CS_img.png" alt="Taepung Corporation" data-aos="fade-up"
+                            data-aos-delay="500" data-aos-mirror="true">
+                        <div class="txt">
+                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">Typhoon Corporation
+                            </h3>
+                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">TVN & TVING<br>10/11
+                                Saturday</p>
+                        </div>
+                    </div>
+                    <div class="CScontents2">
+                        <img src="./back/img/CS_img2.png" alt="Genie, Make a Wish" data-aos="fade-up"
+                            data-aos-delay="500" data-aos-mirror="true">
+                        <div class="txt">
+                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">Genie, Make a Wish
+                            </h3>
+                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">Netflix<br>10/03 Friday
+                            </p>
+                        </div>
+                    </div>
+                    <div class="CScontents3">
+                        <img src="./back/img/CS_img3.png" alt="pro bono" data-aos="fade-up" data-aos-delay="500"
+                            data-aos-mirror="true">
+                        <div class="txt">
+                            <h3 data-aos="fade-left" data-aos-delay="1000" data-aos-mirror="true">pro bono</h3>
+                            <p data-aos="fade-left" data-aos-delay="1500" data-aos-mirror="true">TVING <br> 2025~2026
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
 
-        <main></main>
-        <footer class="ver_dark ver_white">
+
+
+
+
+
+        </main>
+
+        <footer class="ver_white">
             <div class="footer_inner">
                 <!-- Top Area -->
                 <div class="footer_top">
